Fix white space on some mobile views by setting html and body css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap');
 
-
-body, .main-font{
-       font-family: 'Amatic SC', cursive;
-}
-
-p {
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
     font-family: 'Amatic SC', cursive;
 }
 
